[master] create appB and proxy_pass to appA

--- a/.conf/nginx-b.conf
+++ b/.conf/nginx-b.conf
@@ -4,10 +4,10 @@ events {
 
 http {
   server {
-    listen 8001;
+    listen 80;
 
     location / {
-      return 200 'hello message from a naaaa woy';
+      proxy_pass http://appa:8001/;
     }
   }
 }
