--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,13 @@ services:
     image: nginx:1.12.2-alpine
     volumes:
       - ./.conf/nginx-a.conf:/etc/nginx/nginx.conf
+  appb:
+    image: nginx:1.12.2-alpine
+    volumes:
+      - ./.conf/nginx-b.conf:/etc/nginx/nginx.conf
     ports:
       - "8080:80"
+    links:
+      - appa
 
   
