[master] seperate server nginx

--- a/.conf/nginx-b.conf
+++ b/.conf/nginx-b.conf
@@ -4,10 +4,10 @@ events {
 
 http {
   server {
-    listen 80;
+    listen 8002;
 
     location / {
-      proxy_pass http://appa:8001/;
+      return 200 'Hello from app B!!!';
     }
   }
 }
