--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,18 @@ services:
     image: nginx:1.12.2-alpine
     volumes:
       - ./.conf/nginx-a.conf:/etc/nginx/nginx.conf
-    ports:
-      - "3000:8001"
+
   appb:
     image: nginx:1.12.2-alpine
     volumes:
       - ./.conf/nginx-b.conf:/etc/nginx/nginx.conf
-    ports:
-      - "3001:8002"
 
-  
+  appresty:
+    image: openresty/openresty:alpine
+    volumes: 
+      - ./.conf/openresty.conf:/usr/local/openresty/nginx/conf/nginx.conf
+    links:
+      - appa
+      - appb
+    ports: 
+      - "8080:8003"
