[master] create logs

--- a/.conf/openresty.conf
+++ b/.conf/openresty.conf
@@ -5,6 +5,7 @@ events {
 http {
   server {
     listen 8003;
+    error_log  /usr/local/openresty/nginx/logs/nginx.error_log error;
 
     location / {
       return 200 'This is openresty';
