[master] first lua language

--- a/.conf/openresty.conf
+++ b/.conf/openresty.conf
@@ -8,7 +8,9 @@ http {
     error_log  /usr/local/openresty/nginx/logs/nginx.error_log error;
 
     location / {
-      return 200 'This is openresty';
+      content_by_lua '
+        ngx.say("<p>hello, world</p>")
+      ';
     }
 
     location /a {
