[master] change order path & lua get params

--- a/.conf/openresty.conf
+++ b/.conf/openresty.conf
@@ -7,18 +7,18 @@ http {
     listen 8003;
     error_log  /usr/local/openresty/nginx/logs/nginx.error_log error;
 
-    location / {
-      content_by_lua '
-        ngx.say("<p>hello, world</p>")
-      ';
-    }
-
     location /a {
       proxy_pass http://appa:8001/;
     }
 
     location /b {
       proxy_pass http://appb:8002/;
+    }
+
+    location / {
+      content_by_lua '
+        ngx.say("hello", ngx.var.arg_name, " eiei")
+      ';
     }
   }
 }
